<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FirstScreen!</string>
    <string name="app_name">Scheduler</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

</resources>